# torus-render

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
nix/modules/: devshell.nix  rust.nix
src/: angle.rs  main.rs  proj.rs  trig.rs
