[package]
authors = ["Brian Kuhns <16kuhnb@gmail.com>"]
edition = "2021"
# If you change the name here, you must also do it in flake.nix (and run `cargo generate-lockfile` afterwards)
name = "torus-renderer"
description = "A simple Rust project using Nix"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.14", features = ["derive"] }
bmp = { version = "0.5.0" }
vecmath = { version = "1.0.0" }
rayon = { version = "1.10.0" }
