[package]
authors = ["Brian Kuhns <16kuhnb@gmail.com>"]
edition = "2021"
# If you change the name here, you must also do it in flake.nix (and run `cargo generate-lockfile` afterwards)
name = "torus-renderer"
description = "A simple Rust project using Nix"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "map"
path = "src/main.rs"

[[bin]]
name = "angle"
path = "src/angle.rs"

[dependencies]
clap = { version = "4.3.14", features = ["derive"] }
vecmath = "1.0.0"
rayon = "1.10.0"
image = "0.25.4"
